test/tests/stages/18_structures/invalid_types/scalar_required/struct_controlling_expression.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[33]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  if
  (
  identifier(x)
  )
  return
  const int(1)
  ;
  return
  const int(0)
  ;
  }
